# p003-3d-cube-github-pages

./: .gitignore  Cargo.toml  GITHUB_ACTIONS_DEBUG.md  README.md  index.html  style.css
.github/workflows/: deploy.yml
src/: lib.rs  main.rs
