[package]
name = "p003-3d-cube-github-pages"
version = "0.1.0"
edition = "2021"
description = "A 3D spinning cube rendered with Rust and WebAssembly"
repository = "https://github.com/yourusername/p003-3d-cube-github-pages"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.87"
web-sys = { version = "0.3.64", features = [
    "Document",
    "Element",
    "HtmlCanvasElement",
    "WebGlBuffer",
    "WebGlProgram",
    "WebGlRenderingContext",
    "WebGlShader",
    "WebGlUniformLocation",
    "Window",
    "console",
    "Performance",
]}
js-sys = "0.3.64"
wasm-bindgen-futures = "0.4.37"
nalgebra = "0.32.3"
console_error_panic_hook = "0.1.7"

[profile.release]
opt-level = "s"
